# nfc-writer

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  build_windows.bat  pyproject.toml
.github/workflows/: build.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  AppContent.vue  env.d.ts  main.ts  styles.css
frontend/src/composables/: useNfc.ts
frontend/src/services/: bridge.ts
frontend/src/stores/: nfc.ts
frontend/src/types/: nfc.ts
frontend/src/views/: DashboardView.vue  HistoryView.vue  ReadView.vue  WriteView.vue
src/nfc_writer/: __init__.py  app.py  bridge.py  main.py  path_utils.py
src/nfc_writer/nfc/: __init__.py  ndef_codec.py  service.py  types.py
src/nfc_writer/nfc/adapters/: __init__.py  base.py  mock.py  pyscard_adapter.py  xinheng_adapter.py
tests/: conftest.py  test_bridge.py  test_mock_adapter.py  test_service.py
