[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfc-writer"
version = "0.1.0"
description = "Python + pywebview + Vue desktop NFC reader/writer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyscard>=2.3.1",
  "pyserial>=3.5",
  "pywebview>=5,<6",
]

[project.optional-dependencies]
dev = [
  "nuitka>=4.1.2",
  "ordered-set>=4.1.0",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
nfc = [
  "pyscard>=2,<3",
]
xinheng = [
  "pythonnet>=3,<4",
  "pyserial>=3,<4",
]

[project.scripts]
nfc-writer = "nfc_writer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
